[workspace]
resolver = "2"
members = ["near-sdk", "near-sdk-macros", "near-contract-standards", "near-sys"]
exclude = ["examples/"]

[workspace.package]
version = "5.24.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/near/near-sdk-rs"
homepage = "https://docs.near.org/"

# Special triple # comment for ci.
[patch.crates-io]
### borsh = { git = "https://github.com/near/borsh-rs", branch = "master" }
### near-vm-logic = { git = "https://github.com/near/nearcore", branch = "master" }
### near-primitives-core = { git = "https://github.com/near/nearcore", branch = "master" }
