[workspace]
resolver = "3"
members = [
    "near-sdk",
    "near-sdk-core",
    "near-sdk-macros",
    "near-contract-standards",
    "near-sys",
    "near-env",
    "near-global-contracts",
    "near-crypto-hash",
]
exclude = ["examples/"]

[workspace.package]
version = "5.26.1"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/near/near-sdk-rs"
homepage = "https://docs.near.org/"
rust-version = "1.93"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(near)']

# Special triple # comment for ci.
[patch.crates-io]
### borsh = { git = "https://github.com/near/borsh-rs", branch = "master" }
### near-vm-logic = { git = "https://github.com/near/nearcore", branch = "master" }
### near-primitives-core = { git = "https://github.com/near/nearcore", branch = "master" }
# 2.12 RC: pull in-flight patches until the dependent crates publish stable releases.
# Remove these once near-workspaces and near-jsonrpc-client publish their 2.12-compatible versions.
near-workspaces = { git = "https://github.com/near/near-workspaces-rs.git", branch = "bump/nearcore-2.12" }
near-jsonrpc-client = { git = "https://github.com/near/near-jsonrpc-client-rs.git", branch = "bump/nearcore-2.12" }
