[workspace]
resolver = "3"
members = [
    "near-sdk",
    "near-sdk-core",
    "near-sdk-env",
    "near-sdk-macros",
    "near-contract-standards",
    "near-sys",
    "near-global-contracts",
    "near-crypto-hash",
]
exclude = ["examples/"]

[workspace.package]
version = "5.29.0-rc.1"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/near/near-sdk-rs"
homepage = "https://docs.near.org/"
rust-version = "1.93"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(near)']
