[package]
name = "near-bindgen-core"
version = "0.2.0"
authors = ["Near Inc <max@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/nearprotocol/near-bindgen"
homepage = "https://github.com/nearprotocol/near-bindgen"
description = """
Core part of the library for writing NEAR smart contracts.
"""

[dependencies]
proc-macro2 = "0.4.30"
syn = {version = "0.15.34", features = ["full", "fold"] }
quote = "0.6.12"

[dev-dependencies]
rustfmt-nightly = {version = "1.4.5", features = ["cargo-fmt"] }
pretty_assertions = "0.6.1"
