[package]
name = "near-bindgen-core"
version = "0.3.5"
authors = ["Near Inc <max@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/nearprotocol/near-bindgen"
homepage = "https://github.com/nearprotocol/near-bindgen"
description = """
Core part of the library for writing NEAR smart contracts.
"""

[dependencies]
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["full", "fold"] }
quote = "1.0"
