[package]
name = "near-bindgen-macros"
version = "0.3.4"
authors = ["Near Inc <max@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/nearprotocol/near-bindgen"
homepage = "https://github.com/nearprotocol/near-bindgen"
description = """
Main macro of the library for writing NEAR smart contracts.
"""

[lib]
proc-macro = true

[dependencies]
near-bindgen-core = { path = "../near-bindgen-core", version = "0.3.4"}
near-bindgen-promise = { path = "../near-bindgen-promise", version = "0.3.4"}
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["full", "fold"] }
quote = "1.0"


