[package]
name = "near-bindgen-promise"
version = "0.3.10"
authors = ["Near Inc <max@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/nearprotocol/near-bindgen"
homepage = "https://github.com/nearprotocol/near-bindgen"
description = """
Auto-implementing cross-contrac wrappers through macros.
"""

[dependencies]
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["full", "fold"] }
quote = "1.0"
Inflector = "0.11.4"
