[package]
name = "near-bindgen"
version = "0.3.0"
authors = ["Near Inc <max@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/nearprotocol/near-bindgen"
homepage = "https://github.com/nearprotocol/near-bindgen"
description = """
Rust library for writing NEAR smart contracts.
"""

[[test]]
name = "compilation_tests"
path = "compilation_tests/all.rs"

[dependencies]
# Provide near_bindgen macros.
near-bindgen-macros = { path = "../near-bindgen-macros", version = "0.3.0"}
borsh = "0.2.7"
near-vm-logic = {version = "0.3.1", features = [], default-features = false }
lazy_static = {version = "1.4.0", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.0"
trybuild = "1.0"

[features]
default = []
# Re-export mocks feature for testing.
testing = ["near-vm-logic/mocks", "lazy_static"]

# Special triple # comment for ci.
### [patch.crates-io]
### borsh = { git = "https://github.com/nearprotocol/borsh", branch = "master" }
### near-vm-logic = { git = "https://github.com/nearprotocol/nearcore", branch = "staging" }
