[package]
name = "near-bindgen"
version = "0.6.0"
authors = ["Near Inc <max@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/nearprotocol/near-bindgen"
homepage = "https://github.com/nearprotocol/near-bindgen"
description = """
Rust library for writing NEAR smart contracts.
"""

[[test]]
name = "compilation_tests"
path = "compilation_tests/all.rs"

[dependencies]
# Provide near_bindgen macros.
serde = { version = "1.0", features = ["derive"] }
near-bindgen-macros = { path = "../near-bindgen-macros", version = "0.6.0"}
borsh = "0.6.0"
near-vm-logic = "0.6.0"
near-runtime-fees = "0.6.0"

[dev-dependencies]
serde_json = "1.0"
rand = "0.7.2"
trybuild = "1.0"
rustversion = "1.0"
rand_xorshift = "0.2.0"
