[package]
name = "near-contract-sim"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/near-sdk-rs"
homepage = "https://near.org"
description = """
Lightweight multi-contract testing runtime for NEAR smart contracts.
Enables fast cross-contract call testing without a full sandbox.
"""
categories = ["development-tools::testing", "wasm"]
keywords = ["near", "smart-contracts", "testing", "blockchain"]

[dependencies]
# NEAR VM execution
near-vm-runner = { version = "0.34", features = ["wasmtime_vm", "prepare"] }
near-primitives-core = "0.34"
near-parameters = "0.34"
near-crypto = { version = "0.34", default-features = false }

# Token/Gas types (re-exported by near-sdk)
near-gas = "0.3"
near-token = "0.3"
near-account-id = "2.3.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1.0"

[dev-dependencies]
# For testing the simulator itself
near-sdk = { path = "../near-sdk", features = ["unit-testing"] }
tokio = { version = "1", features = ["rt", "macros"] }
insta = { version = "1.39", features = ["json"] }
wat = "1.244.0"

[features]
default = []
