[package]
name = "near-crypto-hash"
version = "0.1.0"
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = """
Lightweight 32-byte hash type (CryptoHash) and its Base58 wrapper for the NEAR SDK.
"""

[dependencies]
bs58 = "0.5"

serde = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "3", optional = true }
borsh = { version = "1", features = ["derive"], optional = true }
arbitrary = { version = "1.4", features = ["derive"], optional = true }
schemars-v0_8 = { version = "0.8", optional = true, package = "schemars" }

[lints]
workspace = true

[features]
default = []

serde = ["dep:serde", "dep:serde_with"]

borsh = ["dep:borsh"]

schemars-v0_8 = ["dep:schemars-v0_8"]

abi = ["borsh/unstable__schema", "schemars-v0_8"]

arbitrary = ["dep:arbitrary"]

__near-sdk-unit-testing = ["serde", "borsh"]
