[package]
name = "near-crypto-hash"
version = "0.1.0"
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = """
Lightweight 32-byte hash type (CryptoHash) for the NEAR SDK.
"""

[dependencies]

[lints]
workspace = true
