[package]
name = "near-digest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
# Deliberately below the workspace 1.93. The off-chain surface (pure-Rust RustCrypto
# backends) only needs edition 2024's 1.85 floor, and downstream off-chain consumers such as
# near-kit depend on this crate at 1.88. The `cfg(near)` deps (near-sdk-env, impl-tools) do
# require 1.93, but the on-chain path is always built with rustc 1.93+ (enforced by
# cargo-near / the protocol version), so it never constrains an off-chain 1.88 build — the
# same arrangement near-global-contracts and near-crypto-hash already use.
rust-version = "1.88"
description = """
`digest` trait implementations for hash functions in NEAR smart contracts: backed by NEAR host functions on-chain, pure Rust off-chain.
"""

[dependencies]
digest = "0.11.3"

zeroize = { version = "1.9.0", features = ["derive"], optional = true }

[target.'cfg(not(near))'.dependencies]
ripemd = { version = "0.2.0", optional = true }
sha2 = { version = "0.11.0", optional = true }
sha3 = { version = "0.11.0", optional = true }

[target.'cfg(near)'.dependencies]
near-sdk-env = { path = "../near-sdk-env/", version = "~0.1.4" }
impl-tools = "0.12.0"
# for `unstable` Sha3-256/512
sha3 = { version = "0.11.0", optional = true }

[features]
ripemd = ["dep:ripemd"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]

zeroize = [
    "dep:zeroize",
    "digest/zeroize",
    "ripemd?/zeroize",
    "sha2?/zeroize",
    "sha3?/zeroize",
]

unstable = []

[dev-dependencies]
# XXX: `near-sdk` was added in order to enable tests and doctests compiling with mockchain
near-sdk = { path = "../near-sdk", features = ["unit-testing"] }
near-digest = { path = ".", features = [
    "ripemd",
    "sha2",
    "sha3",
    "zeroize",
    "unstable",
] }
rstest = "0.26.1"
hex-literal = "1.1.0"

[target.'cfg(near)'.dev-dependencies]
near-sdk = { path = "../near-sdk/", features = ["unit-testing"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
