[package]
name = "near-sdk-core"
version = "0.1.1"
authors = ["Near Inc <hello@near.org>"]
edition.workspace = true
license.workspace = true
readme = "README.md"

categories.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = """
Core Rust types from the NEAR SDK, extracted for use without the full SDK.
"""

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", features = ["preserve_order"], optional = true }
serde_with = { version = "3", features = [
    "base64",
    "hex",
    "json",
], optional = true }
borsh = { version = "1.0.0", features = ["derive"], optional = true }
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }
bs58 = "0.5"

arbitrary = { version = "1.4", feature = ["derive"], optional = true }

near-account-id = { version = "2.3.0" }
near-gas = { version = "0.3" }
near-token = { version = "0.3" }
near-crypto-hash = { path = "../near-crypto-hash/", version = "~0.1.0" }
near-env = { path = "../near-env/", version = "~0.1.1", optional = true }

schemars-v0_8 = { version = "0.8.22", optional = true, package = "schemars" }
near-primitives-core = { version = "0.35", optional = true }
near-crypto = { version = "0.35", default-features = false, optional = true }
# XXX: unicode-segmentation 1.13.1 requires Rust 1.87 but does not declare rust-version
unicode-segmentation = { version = ">=1, <1.13.1", optional = true }
near-parameters = { version = "0.35", optional = true }

[target.'cfg(near)'.dependencies]
near-env = { path = "../near-env/", version = "~0.1.1" }

[dev-dependencies]
# XXX: `near-sdk` was added in order to enable tests and doctests compiling with mockchain
near-sdk = { path = "../near-sdk", version = "~5.26.2", features = [
    "unit-testing",
] }

[lints]
workspace = true

[features]
default = []

serde = [
    "dep:serde",
    "dep:serde_json",
    "dep:serde_with",
    "dep:base64",
    "dep:hex",
    "near-account-id/serde",
    "near-gas/serde",
    "near-token/serde",
    "near-crypto-hash/serde",
]
borsh = [
    "dep:borsh",
    "near-account-id/borsh",
    "near-gas/borsh",
    "near-token/borsh",
    "near-crypto-hash/borsh",
]

schemars-v0_8 = [
    "dep:schemars-v0_8",
    "near-account-id/schemars-v0_8",
    "near-gas/schemars-v0_8",
    "near-crypto-hash/schemars-v0_8",
]

abi = [
    "borsh",
    "schemars-v0_8",
    "borsh/unstable__schema",
    "near-account-id/abi",
    "near-gas/abi",
    "near-crypto-hash/abi",
    "serde_with/schemars_0_8",
]

arbitrary = [
    "dep:arbitrary",
    "near-account-id/arbitrary",
    "near-crypto-hash/arbitrary",
]

near-primitives-interop = ["dep:near-primitives-core"]
near-crypto-interop = ["dep:near-crypto", "dep:unicode-segmentation"]

__near-sdk-unit-testing = [
    "serde",
    "borsh",
    "near-primitives-interop",
    "near-crypto-interop",
    "near-env/__near-sdk-unit-testing",
    "near-crypto-hash/__near-sdk-unit-testing",
    "dep:unicode-segmentation",
    "dep:near-parameters",
    "dep:near-env",
]
