[package]
name = "near-sdk-core"
version = "4.1.2"
authors = ["Near Inc <hello@near.org>"]
edition.workspace = true
license.workspace = true
readme = "README.md"

categories.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = """
Core Rust types from the NEAR SDK, extracted for use without the full SDK.
"""

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", features = ["preserve_order"], optional = true }
serde_with = { version = "3", features = [
    "base64",
    "hex",
    "json",
], optional = true }
borsh = { version = "1.0.0", features = ["derive"], optional = true }
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }
bs58 = "0.5"

arbitrary = { version = "1.4", features = ["derive"], optional = true }

near-account-id = { version = "2.3.0" }
near-gas = { version = "0.3" }
near-token = { version = "0.3" }
near-crypto-hash = { path = "../near-crypto-hash/", version = "~0.2.0" }
near-sdk-env = { path = "../near-sdk-env/", version = "~0.1.1", optional = true }

schemars-v0_8 = { version = "0.8.22", optional = true, package = "schemars" }
# Pinned to the nearcore 2.13-release branch; see near-sdk/Cargo.toml for the rationale. All
# nearcore-versioned crates across the workspace must use the same source/rev so their types unify.
near-primitives-core = { git = "https://github.com/near/nearcore", rev = "1aa50f765d15d1cd5a946daf3eff04646c5a1957", optional = true }
near-crypto = { git = "https://github.com/near/nearcore", rev = "1aa50f765d15d1cd5a946daf3eff04646c5a1957", default-features = false, optional = true }
unicode-segmentation = { version = "1", optional = true }
near-parameters = { git = "https://github.com/near/nearcore", rev = "1aa50f765d15d1cd5a946daf3eff04646c5a1957", optional = true }

[target.'cfg(near)'.dependencies]
near-sdk-env = { path = "../near-sdk-env/", version = "~0.1.1" }

[dev-dependencies]
# XXX: `near-sdk` was added in order to enable tests and doctests compiling with mockchain
near-sdk = { path = "../near-sdk", features = ["unit-testing"] }

[lints]
workspace = true

[features]
default = []

serde = [
    "dep:serde",
    "dep:serde_json",
    "dep:serde_with",
    "dep:base64",
    "dep:hex",
    "near-account-id/serde",
    "near-gas/serde",
    "near-token/serde",
]
borsh = [
    "dep:borsh",
    "near-account-id/borsh",
    "near-gas/borsh",
    "near-token/borsh",
]

schemars-v0_8 = [
    "dep:schemars-v0_8",
    "near-account-id/schemars-v0_8",
    "near-gas/schemars-v0_8",
]

abi = [
    "borsh",
    "schemars-v0_8",
    "borsh/unstable__schema",
    "near-account-id/abi",
    "near-gas/abi",
    "serde_with/schemars_0_8",
]

arbitrary = [
    "dep:arbitrary",
    "near-account-id/arbitrary",
]

near-primitives-interop = ["dep:near-primitives-core"]
near-crypto-interop = ["dep:near-crypto", "dep:unicode-segmentation"]

__near-sdk-unit-testing = [
    "serde",
    "borsh",
    "near-primitives-interop",
    "near-crypto-interop",
    "near-sdk-env/__near-sdk-unit-testing",
    "dep:unicode-segmentation",
    "dep:near-parameters",
    "dep:near-sdk-env",
]
